crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_reserved_names_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const user = pgTable("user", {
  id: integer("id").primaryKey(),
  tags: text("tags").notNull(),
});

export const userRelations = relations(user, ({ one, many }) => ({
  userTags: many(userTags),
  userPass: many(userPass),
}));
