crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_uninvolved_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const user = pgTable("user", {
  id: integer("id").primaryKey(),
});

export const userRelations = relations(user, ({ one, many }) => ({
  userUserFriends: many(userFriends, { relationName: "UserFriendsUser" }),
  friendUserFriends: many(userFriends, { relationName: "UserFriendsFriend" }),
}));
